--- a/section1/3.html
+++ b/section1/3.html
@@ -7,7 +7,7 @@
     <script>
       function solution(n) {
         let answer;
-
+        answer = Math.ceil(n / 12);
         return answer;
       }
 
