--- a/section1/3.solution.html
+++ b/section1/3.solution.html
@@ -6,14 +6,12 @@
   <body>
     <script>
       function solution(n) {
-        let answer = 0;
-        for (let i = 1; i <= n; i++) {
-          answer = answer + i;
-        }
+        let answer;
+        answer = Math.ceil(n / 12);
         return answer;
       }
 
-      console.log(solution(10));
+      console.log(solution(178));
     </script>
   </body>
 </html>
