--- a/section1/3.html
+++ b/section1/3.html
@@ -15,3 +15,8 @@
     </script>
   </body>
 </html>
+
+<!-- n % 12 !== 0? (n/12)+1 : n/12
+이렇게 했을 때 (n/12)+1 소수점 뒤의 숫자들은 Math 매서드를 안쓰고 어떻게 없애줄까 
+parseInt를 사용해주면 된다. 근데 이것도 어쨌든 내부 함수를 사용하는 것이다. 내부 구조에 대해 알고 싶다
+어떻게 컴퓨터에게 알려주는지 -->
