--- a/section1/5.solution.html
+++ b/section1/5.solution.html
@@ -8,7 +8,10 @@
       function solution(arr) {
         let answer,
           min = Number.MAX_SAFE_INTEGER;
-        answer = Math.min(...arr);
+        for (let i = 0; i < arr.length; i++) {
+          if (arr[i] < min) min = arr[i];
+        }
+        answer = min;
         return answer;
       }
 
