--- a/section1/7.solution.html
+++ b/section1/7.solution.html
@@ -7,16 +7,18 @@
     <script>
       function solution(day, arr) {
         let answer = 0;
-        for (i = 0; i < arr.length; i++) {
-          if (Number(arr[i].toString().slice(1, 2)) === day) {
-            answer++;
-          }
+        for (let x of arr) {
+          if (x % 10 == day) answer++;
         }
+
         return answer;
       }
 
-      arr = [25, 23, 12, 47, 53, 17, 33];
+      arr = [25, 23, 11, 47, 53, 17, 33];
       console.log(solution(3, arr));
     </script>
   </body>
 </html>
+
+<!-- 어떤 숫자든지 10으로 나누면 나머지는 끝자리 수이다. 예를 들어 2345를 10으로 나누면
+나머지는 5이다. -->
