--- a/section1/11.html
+++ b/section1/11.html
@@ -7,7 +7,11 @@
     <script>
       function solution(s) {
         let answer = 0;
-
+        for (let word of s) {
+          if (word === word.toUpperCase()) {
+            answer++;
+          }
+        }
         return answer;
       }
 
@@ -16,3 +20,8 @@
     </script>
   </body>
 </html>
+
+<!-- 아스키 코드로도 풀 수 있다. -->
+<!-- 대문자 아스키번호 
+대문자 : 65 ~ 90 (26개)
+소문자: 97~122 (26개))  -->
