--- a/section1/12.html
+++ b/section1/12.html
@@ -6,7 +6,7 @@
   <body>
     <script>
       function solution(s) {
-        let answer = '';
+        let answer = s.toUpperCase();
 
         return answer;
       }
